# Rust-gRPC-User-Service

./: Cargo.toml  build.rs
proto/: user_service.proto
src/: auth.rs  client.rs  ddb_client.rs  server.rs
