[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "user-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "user-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }

aws-config = "0.4.0"
aws-sdk-dynamodb = "0.4.0"

[build-dependencies]
tonic-build = "0.6"
